# nlp_research

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  finlang.config.constants.html  finlang.config.db_config.html  finlang.config.html  finlang.html  finlang.nlp_utils.db_utils.html  finlang.nlp_utils.html  finlang.nlp_utils.tagging_utils.html  finlang.plotting.app.html  finlang.plotting.html  finlang.plotting.plotting_utils.html  finlang.scrape_utils.article_utils.html  finlang.scrape_utils.data_utils.html  finlang.scrape_utils.finviz_utils.html  finlang.scrape_utils.html  finlang.scrape_utils.motley_utils.html  finlang.scrape_utils.reddit_utils.html  finlang.scrape_utils.twitter_utils.html  finlang.workers.html  finlang.workers.scrape_worker.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
_sources/: finlang.plotting.app.rst.txt  finlang.plotting.plotting_utils.rst.txt  finlang.scrape_utils.data_utils.rst.txt  finlang.scrape_utils.twitter_utils.rst.txt  modules.rst.txt
config/: constants.py  db_config.py
docs/: conf.py  finlang.config.constants.rst  finlang.config.db_config.rst  finlang.config.rst  finlang.nlp_utils.tagging_utils.rst  finlang.plotting.rst  finlang.scrape_utils.article_utils.rst  finlang.scrape_utils.rst  finlang.workers.rst  index.rst  modules.rst  scrape_utils.data_utils.rst  scrape_utils.reddit_utils.rst  scrape_utils.rst  scrape_utils.twitter_utils.rst  sentiment.config.db_config.rst  sentiment.config.rst  sentiment.nlp_utils.rst  sentiment.nlp_utils.tagging_utils.rst  sentiment.scrape_utils.article_utils.rst  sentiment.scrape_utils.data_utils.rst  sentiment.scrape_utils.finviz_utils.rst  sentiment.scrape_utils.motley_utils.rst  sentiment.scrape_utils.reddit_utils.rst  sentiment.scrape_utils.rst  sentiment.workers.comments_worker.rst
nlp_utils/: db_utils.py  tagging_utils.py
notebooks/: =2.3.0  Ryan_Downing_Assignment_1_BMGT444_0301.ipynb  Ryan_Downing_Self_Assignment_2_BMGT444_0301.ipynb  comments_eda.ipynb  data_cleaning.ipynb  fine_tuning.ipynb  pl_fine_tuning.ipynb  reddit_investing_sentiment.ipynb  tagging_pipeline_demo.ipynb
rsutils/: constants.py  data_utils.py  tagging_utils.py
scrape_utils/: article_utils.py  data_utils.py  earnings_utils.py  finviz_utils.py  motley_utils.py  reddit_utils.py
(+146 files in other folders)
