[tool.poetry]
name = "nlp_research"
version = "0.0.1"
description = "Exploratory Research in the NLP field by Ryan Downing"
authors = ["ryansdowning <ryansdowning1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.1.0"
transformers = "^3.0.2"
praw = "^7.1.0"
flashtext = "^2.7"
loguru = "^0.5.1"
beautifulsoup4 = "^4.9.3"
pyodbc = "^4.0.30"
dash = "^1.17.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^2.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
