[tool.poetry]
name = "nlp_research"
version = "0.0.1"
description = "Exploratory Research in the NLP field by Ryan Downing"
authors = ["ryansdowning <ryansdowning1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.1.0"
transformers = "4.2.0"
praw = "^7.1.0"
flashtext = "^2.7"
loguru = "^0.5.1"
beautifulsoup4 = "^4.9.3"
pyodbc = "^4.0.30"
dash = "^1.17.0"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
tqdm = "^4.54.1"
torch = "^1.7.1"
torchvision = "^0.8.2"
pydata-sphinx-theme = "^0.4.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^2.2.4"
Sphinx = "^3.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
